--- a/css/estilo.scss
+++ b/css/estilo.scss
@@ -1,1 +1,16 @@
 
+
+*{
+    margin: 0; padding: 0;
+    list-style: none;
+    text-decoration: none;
+    border: none;
+    box-sizing: border-box;
+}
+
+body{
+    background-color: #121214;
+    background-image: url(../img/fundo.svg);
+    background-position-x: center;
+    background-position-y: 55.6%;
+}
