--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@700;900&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -13,5 +14,51 @@ body {
   background-image: url(../img/fundo.svg);
   background-position-x: center;
   background-position-y: 55.6%;
+}
+
+body * {
+  font-family: 'Roboto', sans-serif;
+}
+
+#app {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin: 52px auto;
+}
+
+#app header {
+  margin-bottom: 63px;
+}
+
+#app .card {
+  padding: 32px 23px;
+  text-align: center;
+  background: #1d1c19;
+  border-bottom: 2px solid #f7dd43;
+  border-radius: 6px;
+}
+
+#app .card h2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 16px;
+  padding: 8px 16px;
+  margin-bottom: 53px;
+  font-size: 24px;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin-inline: auto;
+  border: 1px solid #746615;
+  border-radius: 6px;
+  color: #f7dd43;
 }
 /*# sourceMappingURL=estilo.css.map */
