--- a/css/estilo.scss
+++ b/css/estilo.scss
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700;900&display=swap');
 
 *{
     margin: 0; padding: 0;
@@ -13,4 +13,40 @@ body{
     background-image: url(../img/fundo.svg);
     background-position-x: center;
     background-position-y: 55.6%;
+}
+
+body *{
+    font-family: 'Roboto', sans-serif;
+}
+
+#app{
+    width: fit-content;
+    margin: 52px auto;
+
+    header {
+        margin-bottom: 63px;
+    }
+
+    .card {
+        padding: 32px 23px;
+        text-align: center;
+        background: #1d1c19;
+        border-bottom: 2px solid #f7dd43;
+        border-radius: 6px;
+
+        h2{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 16px;
+            padding: 8px 16px;
+            margin-bottom: 53px;
+            font-size: 24px;
+            width: fit-content;
+            margin-inline: auto;
+            border: 1px solid #746615;
+            border-radius: 6px;
+            color: #f7dd43;
+        }
+    }
 }
